# ChangeLog for gnome-base/gnome
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.402 2011/01/19 14:55:15 pacho Exp $

  19 Jan 2011; Pacho Ramos <pacho@gentoo.org> gnome-2.30.2-r1.ebuild,
  gnome-2.32.0.ebuild:
  Lower gcalctool and gnome-games requirements as their .30. versions are not
  ready. Drop ppc keyword due bug #348984.

  18 Jan 2011; Christian Faulhammer <fauli@gentoo.org>
  gnome-2.30.2-r1.ebuild:
  x86 stable, bug 348987

  15 Jan 2011; <nirbheek@gentoo.org> gnome-2.30.2.ebuild,
  gnome-2.30.2-r1.ebuild, gnome-2.32.0.ebuild:
  libgweather slotmove 0 -> 2, new gtk+:3 version coming up

*gnome-2.32.0 (16 Dec 2010)

  16 Dec 2010; Gilles Dartiguelongue <eva@gentoo.org> +gnome-2.32.0.ebuild:
  Add meta for Gnome 2.32.

*gnome-2.30.2-r1 (10 Nov 2010)

  10 Nov 2010; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-2.30.2-r1.ebuild:
  Update dependencies for a pseudo 2.30.3.

  08 Nov 2010; Arun Raghavan <ford_prefect@gentoo.org> gnome-2.30.2.ebuild:
  Clarify gnome-desktop dep as being slot 2

  05 Nov 2010; Pacho Ramos <pacho@gentoo.org> -gnome-2.26.3.ebuild,
  -gnome-2.28.2.ebuild:
  Remove old.

  01 Nov 2010; Samuli Suominen <ssuominen@gentoo.org> gnome-2.30.2.ebuild:
  ppc64 stable wrt #324077

  17 Oct 2010; Raúl Porcel <armin76@gentoo.org> gnome-2.30.2.ebuild:
  alpha/ia64/sparc stable wrt #324077

  11 Sep 2010; Joseph Jezak <josejx@gentoo.org> gnome-2.30.2.ebuild:
  Marked ppc for bug #324077.

  14 Aug 2010; Raúl Porcel <armin76@gentoo.org> gnome-2.30.2.ebuild:
  Drop sh

  14 Aug 2010; Raúl Porcel <armin76@gentoo.org> gnome-2.28.2.ebuild:
  alpha/ia64/sparc stable wrt #314899

  11 Aug 2010; Joseph Jezak <josejx@gentoo.org> gnome-2.28.2.ebuild,
  gnome-2.30.2.ebuild:
  Marked ~ppc for bug #313563.

  03 Aug 2010; Nirbheek Chauhan <nirbheek@gentoo.org> gnome-2.30.2.ebuild:
  Reduce requirements for gcalctool and gnome-games. They have feature