@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.402 2011/01/19 14:55:15 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.403 2011/01/19 16:25:09 pacho Exp $
+
+  19 Jan 2011; Pacho Ramos <pacho@gentoo.org> gnome-2.30.2-r1.ebuild,
+  gnome-2.32.0.ebuild:
+  Lower ekiga.
 
   19 Jan 2011; Pacho Ramos <pacho@gentoo.org> gnome-2.30.2-r1.ebuild,
   gnome-2.32.0.ebuild:
